--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,31 @@
 version: "3.8"
 
 services:
+
   backend:
-    container_name: backend
     build:
       context: .
       dockerfile: src/Dockerfile
-    environment:
-      - FLASK_ENV=development
-      - PYTHONUNBUFFERED=True
-      - FLASK_RUN_HOST=0.0.0.0
+    command: ["gunicorn", "src.wsgi:app", "--bind", "0.0.0.0:5000", "--reload"]
+    container_name: backend
+    env_file:
+      - .env
     ports:
       - "5000:5000"
     volumes:
       - ./src:/src
-    command: ["gunicorn", "src.wsgi:app", "--bind", "0.0.0.0:5000", "--reload"]
+
+  db:
+    image: postgres:13
+    container_name: db
+    env_file:
+      - db.env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=hello_flask
+      - POSTGRES_PASSWORD=hello_flask
+      - POSTGRES_DB=hello_flask_dev
+
+volumes:
+  postgres_data:
