--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,11 +2,18 @@ FROM python:3.8
 
 ENV PYTHONUNBUFFERED 1
 
-COPY ./src /src
-COPY requirements.txt /src
+WORKDIR /my-company
+
+COPY ./src ./src
+COPY ./tests ./tests
+COPY ./migrations ./migrations
+COPY requirements.txt .
+
 RUN pip install --upgrade pip
-RUN pip install -r /src/requirements.txt
+RUN pip install -r requirements.txt
+
+ENV FLASK_APP="src.wsgi:app"
+ENV FLASK_ENV=development
+ENV PYTHONPATH="/my-company/src:${PYTHONPATH}"
 
 RUN pip install gunicorn
-
-EXPOSE 5000
